Fixed visibility of story detail when off-screen

--- a/src/stylesheets/storydetail.css
+++ b/src/stylesheets/storydetail.css
@@ -9,6 +9,7 @@
     background-color: white;
 }
 #story-preview{
+  visibility: hidden;
   z-index:70;
   border-radius: 10px;
   position: fixed;
@@ -19,8 +20,9 @@
   box-shadow: 0 0 10px rgba(0,0,0,.12);
   transition: all 0.2s ease-in-out;}
   #story-preview.show{
-  top:60px;
-  right:0;}
+    visibility: visible;
+    top:60px;
+    right:0;}
 .detail-container{
   height: 100%;
   border-top-left-radius: 10px;
